--- a/Jungle_s Breath/Assembly-CSharp.csproj
+++ b/Jungle_s Breath/Assembly-CSharp.csproj
@@ -67,6 +67,8 @@
      <Compile Include="Assets\Scripts\Game Control\FadeCollider.cs" />
      <Compile Include="Assets\Scripts\Game Control\MusicChanger.cs" />
      <Compile Include="Assets\Scripts\Game Control\ShowOrHideGameObject.cs" />
+     <Compile Include="Assets\Scripts\Menu\BackOnMenu.cs" />
+     <Compile Include="Assets\Scripts\Menu\ButtonClickedPad.cs" />
      <Compile Include="Assets\Scripts\Menu\firstMenu.cs" />
      <Compile Include="Assets\Scripts\Menu\MainMenu.cs" />
      <Compile Include="Assets\Scripts\Menu\PauseMenu.cs" />
