--- a/Jungle_s Breath/Jungle_s Breath.csproj
+++ b/Jungle_s Breath/Jungle_s Breath.csproj
@@ -194,9 +194,6 @@
     <Reference Include="UnityEngine.WindModule">
       <HintPath>C:/Program Files/Unity/Editor/Data/Managed/UnityEngine/UnityEngine.WindModule.dll</HintPath>
     </Reference>
-    <Reference Include="Facebook.Unity.Settings">
-      <HintPath>Library/FacebookSDK/Facebook.Unity.Settings.dll</HintPath>
-    </Reference>
     <Reference Include="UnityEngine.UI">
       <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
     </Reference>
@@ -293,13 +290,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Dust.cs" />
-    <Compile Include="Assets\FollowEnemy.cs" />
-    <Compile Include="Assets\FollowExplodeEnemy.cs" />
-    <Compile Include="Assets\OnRangeDetector.cs" />
-    <Compile Include="Assets\OnRangeDetectorExplosion.cs" />
     <Compile Include="Assets\Scripts\Box\BoxMovement.cs" />
     <Compile Include="Assets\Scripts\Enemy\Boss1Behaviour.cs" />
     <Compile Include="Assets\Scripts\Enemy\MovingEnemy.cs" />
+    <Compile Include="Assets\Scripts\Enemy\Mushroom\FollowExplodeEnemy.cs" />
+    <Compile Include="Assets\Scripts\Enemy\Mushroom\OnRangeDetector.cs" />
+    <Compile Include="Assets\Scripts\Enemy\OnRangeDetectorExplosion.cs" />
+    <Compile Include="Assets\Scripts\Enemy\Rat\Rat.cs" />
+    <Compile Include="Assets\Scripts\Enemy\Shooting\ScaleProjectile.cs" />
     <Compile Include="Assets\Scripts\Enemy\Shooting\Shots\ShootingHoritzontal.cs" />
     <Compile Include="Assets\Scripts\Enemy\Shooting\Shots\ShootingScript.cs" />
     <Compile Include="Assets\Scripts\Enemy\Shooting\Shots\ShootingScript2.cs" />
@@ -317,6 +315,7 @@
     <Compile Include="Assets\Scripts\Menu\firstMenu.cs" />
     <Compile Include="Assets\Scripts\Menu\MainMenu.cs" />
     <Compile Include="Assets\Scripts\Menu\PauseMenu.cs" />
+    <Compile Include="Assets\Scripts\Menu\PlayMusicChange.cs" />
     <Compile Include="Assets\Scripts\Menu\SettingsMenu.cs" />
     <Compile Include="Assets\Scripts\PickUpScript.cs" />
     <Compile Include="Assets\Scripts\Player\Death.cs" />
