--- a/Jungle_s Breath/Assembly-CSharp.csproj
+++ b/Jungle_s Breath/Assembly-CSharp.csproj
@@ -78,7 +78,8 @@
      <Compile Include="Assets\Scripts\Menu\MainMenu.cs" />
      <Compile Include="Assets\Scripts\Menu\PauseMenu.cs" />
      <Compile Include="Assets\Scripts\Menu\PlayMusicChange.cs" />
-     <Compile Include="Assets\Scripts\Menu\RestartButtonSize.cs" />
+     <Compile Include="Assets\Scripts\Menu\RestartButtonSizeMenu.cs" />
+     <Compile Include="Assets\Scripts\Menu\RestartButtonSizePause.cs" />
      <Compile Include="Assets\Scripts\Menu\SettingsMenu.cs" />
      <Compile Include="Assets\Scripts\PickUpScript.cs" />
      <Compile Include="Assets\Scripts\Player\Death.cs" />
