--- a/Jungle_s Breath/Jungle_s Breath.csproj
+++ b/Jungle_s Breath/Jungle_s Breath.csproj
@@ -331,6 +331,7 @@
     <Compile Include="Assets\Scripts\Menu\RestartButtonSizeMenu.cs" />
     <Compile Include="Assets\Scripts\Menu\RestartButtonSizePause.cs" />
     <Compile Include="Assets\Scripts\Menu\SettingsMenu.cs" />
+    <Compile Include="Assets\Scripts\Objects\Rock\RockBehaviour.cs" />
     <Compile Include="Assets\Scripts\PickUpScript.cs" />
     <Compile Include="Assets\Scripts\Player\Death.cs" />
     <Compile Include="Assets\Scripts\Player\PlayerController.cs" />
