--- a/Jungle_s Breath/Jungle_s Breath.csproj
+++ b/Jungle_s Breath/Jungle_s Breath.csproj
@@ -295,6 +295,7 @@
     <Compile Include="Assets\bat.cs" />
     <Compile Include="Assets\BatBoss.cs" />
     <Compile Include="Assets\Boss2Area.cs" />
+    <Compile Include="Assets\CameraShake.cs" />
     <Compile Include="Assets\Dust.cs" />
     <Compile Include="Assets\Scripts\Box\BoxMovement.cs" />
     <Compile Include="Assets\Scripts\Enemy\Boss1Behaviour.cs" />
@@ -324,12 +325,14 @@
     <Compile Include="Assets\Scripts\Menu\ButtonClickedPad.cs" />
     <Compile Include="Assets\Scripts\Menu\FinalText.cs" />
     <Compile Include="Assets\Scripts\Menu\firstMenu.cs" />
+    <Compile Include="Assets\Scripts\Menu\GamePadText.cs" />
     <Compile Include="Assets\Scripts\Menu\MainMenu.cs" />
     <Compile Include="Assets\Scripts\Menu\PauseMenu.cs" />
     <Compile Include="Assets\Scripts\Menu\PlayMusicChange.cs" />
     <Compile Include="Assets\Scripts\Menu\RestartButtonSizeMenu.cs" />
     <Compile Include="Assets\Scripts\Menu\RestartButtonSizePause.cs" />
     <Compile Include="Assets\Scripts\Menu\SettingsMenu.cs" />
+    <Compile Include="Assets\Scripts\Objects\Rock\RockBehaviour.cs" />
     <Compile Include="Assets\Scripts\PickUpScript.cs" />
     <Compile Include="Assets\Scripts\Player\Death.cs" />
     <Compile Include="Assets\Scripts\Player\PlayerController.cs" />
