--- a/Jungle_s Breath/Jungle_s Breath.csproj
+++ b/Jungle_s Breath/Jungle_s Breath.csproj
@@ -297,6 +297,7 @@
     <Compile Include="Assets\Boss2Area.cs" />
     <Compile Include="Assets\CameraShake.cs" />
     <Compile Include="Assets\Dust.cs" />
+    <Compile Include="Assets\GamePadMenu.cs" />
     <Compile Include="Assets\Scripts\Box\BoxMovement.cs" />
     <Compile Include="Assets\Scripts\Enemy\Boss1Behaviour.cs" />
     <Compile Include="Assets\Scripts\Enemy\Bosses\Second Boss\BossStalactite.cs" />
