--- a/Jungle_s Breath/Assembly-CSharp.csproj
+++ b/Jungle_s Breath/Assembly-CSharp.csproj
@@ -58,6 +58,7 @@
      <Compile Include="Assets\Dust.cs" />
      <Compile Include="Assets\GamePadMenu.cs" />
      <Compile Include="Assets\goToLevel2.cs" />
+     <Compile Include="Assets\RatArea.cs" />
      <Compile Include="Assets\Scripts\Box\BoxMovement.cs" />
      <Compile Include="Assets\Scripts\Enemy\Boss1Behaviour.cs" />
      <Compile Include="Assets\Scripts\Enemy\Bosses\Second Boss\BossStalactite.cs" />
@@ -101,6 +102,8 @@
      <Compile Include="Assets\Scripts\Shield\ShieldHitDetector.cs" />
      <Compile Include="Assets\Scripts\Shield\ShieldMovement.cs" />
      <Compile Include="Assets\Scripts\Tutorial\Tutorials.cs" />
+     <Compile Include="Assets\SFXControllerLevel1.cs" />
+     <Compile Include="Assets\SFXControllerLevel2.cs" />
      <Compile Include="Assets\StalactiteBat.cs" />
      <Compile Include="Assets\StalactiteGenerator.cs" />
      <Compile Include="Assets\StalactiteSpawn.cs" />
