--- a/Jungle_s Breath/Assembly-CSharp.csproj
+++ b/Jungle_s Breath/Assembly-CSharp.csproj
@@ -56,12 +56,14 @@
      <Compile Include="Assets\BatBoss.cs" />
      <Compile Include="Assets\Boss2Area.cs" />
      <Compile Include="Assets\CameraShake.cs" />
+     <Compile Include="Assets\caveMusic.cs" />
      <Compile Include="Assets\Dust.cs" />
      <Compile Include="Assets\FallingRock.cs" />
      <Compile Include="Assets\GamePadMenu.cs" />
      <Compile Include="Assets\goToLevel2.cs" />
      <Compile Include="Assets\goToLevel3.cs" />
      <Compile Include="Assets\hideDeadFade.cs" />
+     <Compile Include="Assets\outsideMusic.cs" />
      <Compile Include="Assets\RatArea.cs" />
      <Compile Include="Assets\Scripts\Box\BoxMovement.cs" />
      <Compile Include="Assets\Scripts\Enemy\Boss1Behaviour.cs" />
